# cursed-mtg

./: LICENSE  README.md  data  pyproject.toml  tasks.py
projects/cursed-inventory/: pyproject.toml
projects/cursed-inventory/cursed_inventory/: __main__.py  tui.py
projects/mtg-db/: pyproject.toml
projects/mtg-db/mtg_db/: __init__.py  __main__.py  config.py  models.py  shell.py
