[tool.poetry]
name = "cursed-inventory"
version = "0.0.1"
description = "MTG deck-building... in curses."
authors = ["Pasha Sadikov <sigmat@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.15"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true
dirty = true

# --------------------------------------------------
[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning"
]
build-backend = "poetry.core.masonry.api"
