[tool.poetry]
name = "mtg-db"
version = "0.0.1"
description = "MTG database interactions"
authors = ["Pasha Sadikov <sigmat@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.15"
SQLAlchemy = "^1.4.45"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true
dirty = true

# --------------------------------------------------
[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning"
]
build-backend = "poetry.core.masonry.api"
